examples/bad/syntax-error-in-type-definition.hp
def f :: Int -> [Int => Int] -> Bool -> Int = _;

# Char _ is also a syntax error, but we won't get that far.
